<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.uam.cco.mob.app.parkingpi.Activity.ViewParking_Admin">

    <TextView
        android:id="@+id/listViewTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/listViewTitleTextView"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parkingVacancyEditText"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/parkingsSpinnerList"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toTopOf="@+id/parkingsSpinnerList" />

    <Spinner
        android:id="@+id/parkingsSpinnerList"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"
        app:layout_constraintRight_toLeftOf="@+id/parkingsSpinnerListButton"
        android:layout_marginRight="0dp" />


    <Button
        android:id="@+id/returnToPrincipalButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/returnToPrincipalButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/parkingsSpinnerListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="1dp"
        android:text="@string/parkingsSpinnerListButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/parkingsSpinnerList"
        android:layout_marginTop="0dp" />

    <ListView
        android:id="@+id/recordsParkingListView"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/vagasDisponiveisTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parkingsSpinnerList"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/vagasDisponiveisTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/availableVacanciesTitleTextView"
        tools:text="0"
        android:layout_marginLeft="23dp"
        app:layout_constraintLeft_toLeftOf="@+id/availableVacanciesTitleTextView" />


    <TextView
        android:id="@+id/availableVacanciesTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/availableVacanciesTitleTextView"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/returnToPrincipalButton"
        android:layout_marginLeft="90dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/occupiedVacanciesTitleTextView"
        android:layout_width="63dp"
        android:layout_height="17dp"
        android:text="@string/occupiedVacanciesTitleTextView"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/availableVacanciesTitleTextView"
        android:layout_marginRight="90dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/availableVacanciesTitleTextView"
        android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.875" />

    <TextView
        android:id="@+id/vagasOcupadasTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-1dp"
        android:layout_marginRight="23dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/occupiedVacanciesTitleTextView"
        app:layout_constraintRight_toRightOf="@+id/occupiedVacanciesTitleTextView"
        tools:text="0" />
</android.support.constraint.ConstraintLayout>
